hphp/hack/test/typecheck/dict/cannot_append.php
<?hh

function foo(dict<int, string> $x): void {
  $x[] = "hello";
}
